# ZephyrCodigos

./: .gitignore  README.md
Comandos/Nivel_0/src/: main.c
Comandos/Nivel_0_LED/: CMakeLists.txt  prj.conf
Comandos/Nivel_0_LED/src/: main.c
Comandos/Subcomando_Estatico/: CMakeLists.txt
Comandos/Subcomando_Estatico/src/: main.c
Comandos/Subcomando_Estatico_LED/: CMakeLists.txt  prj.conf
Comandos/Subcomando_Estatico_LED/src/: main.c
Comunicaciones/IEEE802154G/Master/: CMakeLists.txt
Comunicaciones/IEEE802154G/amp_client/: prj.conf
Comunicaciones/IEEE802154G/amp_server/: prj.conf
Comunicaciones/IEEE802154G/ieee802154G_socket_server/: prj.conf
Comunicaciones/IEEE_802.15.4/: CMakeLists.txt  prj.conf
Comunicaciones/IEEE_802.15.4/src/: main.c
Comunicaciones/IEEE_802.15.4_Chat/: CMakeLists.txt  prj.conf
Comunicaciones/IEEE_802.15.4_Chat/src/: main.c
Comunicaciones/IEEE_New/: CMakeLists.txt  prj.conf
Comunicaciones/IEEE_New/src/: main.c
Comunicaciones/OpenThread-AutoRed/: prj.conf
Comunicaciones/OpenThread-Multicast/: prj.conf
Comunicaciones/OpenThread-Shell/: prj.conf
Extras/as7341_raw_reading/: CMakeLists.txt
Extras/as7341_raw_reading/boards/: cc1352p1_launchxl.overlay
Extras/as7341_raw_reading/src/: as7341.c  as7341.h  main.c
Extras/as7341_spectrometry/: CMakeLists.txt  prj.conf
Extras/as7341_spectrometry/src/: D65.h  as7341.c  cm.h  main.c  v_lambda.h
HolaMundo/src/: main.c
Hola_Mundo/: CMakeLists.txt
IO/1_Blinky/: CMakeLists.txt
IO/1_Blinky/src/: main.c
IO/3_Lecturas_Analogicas/: CMakeLists.txt
Inputs_Y_Outputs/: prueba.py
Inputs_Y_Outputs/2_GPIO/: CMakeLists.txt
Inputs_Y_Outputs/3_Lecturas_Analogicas/: prj.conf
Inputs_Y_Outputs/4_Sensores_Internos/: CMakeLists.txt  prj.conf
Inputs_Y_Outputs/5_i2c/: CMakeLists.txt  prj.conf
Inputs_Y_Outputs/6_pwm/: prj.conf
Inputs_Y_Outputs/7_Sabanales/: CMakeLists.txt
Inputs_Y_Outputs/7_diomedes/: prj.conf
MultiThreading/: CMakeLists.txt  prj.conf
MultiThreading/src/: main.c
ieee802154_socket_client/boards/: beagleconnect_freedom.overlay
ieee802154_socket_client/src/: main.c
ieee802154_socket_server/boards/: beagleconnect_freedom.overlay
ieee802154_socket_server/src/: main.c
pruebasss/prueba/: prj.conf
(+23 files in other folders)
